update script link

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js" defer></script>
   <script src="js/search.js" defer></script>
   <script src="js/getGoods.js" defer></script>
+  <script src="js/card.js" defer></script>
 </head>
 <!-- class="show-goods" -->
 
@@ -587,7 +587,7 @@
 					</tr>
 				</thead>
 				<tbody class="cart-table__goods">
-					<tr>
+					<!-- <tr>
 						<td>name</td>
 						<td>price$</td>
 						<td><button class="cart-btn-minus"">-</button></td>
@@ -595,7 +595,7 @@
 						<td><button class=" cart-btn-plus"">+</button></td>
 						<td>10$</td>
 						<td><button class="cart-btn-delete"">x</button></td>
-					</tr>
+					</tr> -->
 				</tbody>
 				<tfoot>
 					<tr>
