--- a/goods.html
+++ b/goods.html
@@ -17,9 +17,9 @@
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<!-- <link rel="stylesheet" href="css/swiper-bundle.min.css" /> -->
 	<link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js" defer></script>
   <script src="js/search.js" defer></script>
   <script src="js/getGoods.js" defer></script>
+  <script src="js/card.js" defer></script>
 </head>
 <!-- class="show-goods" -->
 
